// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Avatar 1`] = `Array []`;

exports[`Mock render - default - value[0] - Button 1`] = `Array []`;

exports[`Mock render - default - value[0] - Input 1`] = `Array []`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "avatar": undefined,
      "className": "{}",
      "events": Object {},
      "id": "default",
      "paragraph": undefined,
      "round": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.active - value[0] - Avatar 1`] = `Array []`;

exports[`Mock render - properties.active - value[0] - Button 1`] = `Array []`;

exports[`Mock render - properties.active - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.active - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "active": true,
      "avatar": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.active",
      "paragraph": undefined,
      "round": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.avatar boolean - value[0] - Avatar 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.avatar boolean",
      "shape": undefined,
      "size": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.avatar boolean - value[0] - Button 1`] = `Array []`;

exports[`Mock render - properties.avatar boolean - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.avatar boolean - value[0] - default 1`] = `Array []`;

exports[`Mock render - properties.avatar object circle - value[0] - Avatar 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.avatar object circle",
      "shape": "circle",
      "size": "large",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.avatar object circle - value[0] - Button 1`] = `Array []`;

exports[`Mock render - properties.avatar object circle - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.avatar object circle - value[0] - default 1`] = `Array []`;

exports[`Mock render - properties.avatar object square - value[0] - Avatar 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.avatar object square",
      "shape": "square",
      "size": "small",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.avatar object square - value[0] - Button 1`] = `Array []`;

exports[`Mock render - properties.avatar object square - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.avatar object square - value[0] - default 1`] = `Array []`;

exports[`Mock render - properties.button object circle - value[0] - Avatar 1`] = `Array []`;

exports[`Mock render - properties.button object circle - value[0] - Button 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.button object circle",
      "shape": "circle",
      "size": "large",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.button object circle - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.button object circle - value[0] - default 1`] = `Array []`;

exports[`Mock render - properties.button object round - value[0] - Avatar 1`] = `Array []`;

exports[`Mock render - properties.button object round - value[0] - Button 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.button object round",
      "shape": "round",
      "size": "small",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.button object round - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.button object round - value[0] - default 1`] = `Array []`;

exports[`Mock render - properties.paragraph boolean - value[0] - Avatar 1`] = `Array []`;

exports[`Mock render - properties.paragraph boolean - value[0] - Button 1`] = `Array []`;

exports[`Mock render - properties.paragraph boolean - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.paragraph boolean - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "avatar": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.paragraph boolean",
      "paragraph": false,
      "round": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.paragraph object width all - value[0] - Avatar 1`] = `Array []`;

exports[`Mock render - properties.paragraph object width all - value[0] - Button 1`] = `Array []`;

exports[`Mock render - properties.paragraph object width all - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.paragraph object width all - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "avatar": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.paragraph object width all",
      "paragraph": Object {
        "rows": 3,
        "width": 300,
      },
      "round": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.paragraph object width array - value[0] - Avatar 1`] = `Array []`;

exports[`Mock render - properties.paragraph object width array - value[0] - Button 1`] = `Array []`;

exports[`Mock render - properties.paragraph object width array - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.paragraph object width array - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "avatar": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.paragraph object width array",
      "paragraph": Object {
        "rows": 3,
        "width": Array [
          700,
          250,
          500,
        ],
      },
      "round": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title boolean - value[0] - Avatar 1`] = `Array []`;

exports[`Mock render - properties.title boolean - value[0] - Button 1`] = `Array []`;

exports[`Mock render - properties.title boolean - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.title boolean - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "avatar": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.title boolean",
      "paragraph": undefined,
      "round": undefined,
      "title": false,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title object - value[0] - Avatar 1`] = `Array []`;

exports[`Mock render - properties.title object - value[0] - Button 1`] = `Array []`;

exports[`Mock render - properties.title object - value[0] - Input 1`] = `Array []`;

exports[`Mock render - properties.title object - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "active": undefined,
      "avatar": undefined,
      "className": "{}",
      "events": Object {},
      "id": "properties.title object",
      "paragraph": undefined,
      "round": undefined,
      "title": Object {
        "width": 250,
      },
    },
    Object {},
  ],
]
`;
